# GibEngine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  travis-install.sh
Assets/Models/brickwall/: brickwall.mtl
Assets/Models/building/: building.mtl
Assets/Models/cobblestone/: cobblestone.mtl
Assets/Models/default/box/: box.mtl
Assets/Models/default/sphere/: sphere.mtl
Assets/Models/house/: house.mtl
Assets/Models/sponza/: sponza.mtl
Assets/Models/woodhouse/: woodhouse.mtl
Assets/Shaders/: color_fs.glsl  color_fs_300_es.glsl  color_fs_420.glsl  color_vs.glsl  color_vs_420.glsl  deferred_geometry_fs_420.glsl  deferred_lighting_fs_420.glsl  deferred_lighting_vs_420.glsl  skybox_fs_420.glsl  skybox_vs_420.glsl
Assets/Shaders/300_es/: color_fs.glsl  color_vs.glsl  deferred_geometry_fs.glsl  deferred_geometry_vs.glsl  deferred_lighting_fs.glsl  deferred_lighting_vs.glsl  render_to_texture_fs.glsl  render_to_texture_vs.glsl  skybox_fs.glsl  skybox_vs.glsl
Assets/Shaders/420/: ambient_occlusion_fs.glsl  ambient_occlusion_vs.glsl  color_fs.glsl  color_vs.glsl  deferred_geometry_fs.glsl  deferred_geometry_vs.glsl  deferred_lighting_fs.glsl  deferred_lighting_vs.glsl  render_to_texture_fs.glsl  render_to_texture_vs.glsl  skybox_fs.glsl  skybox_vs.glsl
Editor/: CMakeLists.txt
Editor/include/: Editor.h  IObserver.h  Ionicons.h  Main.h  Observer.h  UnixDirectoryChangeObserver.h  WindowsDirectoryChangeObserver.h
Editor/include/components/: ContentBrowser.h  Dock.h  EntityInspector.h  IComponent.h  Menubar.h  StatusBar.h
Editor/src/: Editor.cpp  Main.cpp  UnixDirectoryChangeObserver.cpp  WindowsDirectoryChangeObserver.cpp
Editor/src/components/: ContentBrowser.cpp  Dock.cpp  Menubar.cpp  StatusBar.cpp
Engine/: .gitignore  CMakeLists.txt
Engine/include/: AABB.h  BaseEntity.h  CameraBase.h  ChaseCamera.h  Entity.h  EnumFlags.h  File.h  FreeCamera.h  Game.h  IEntity.h  Input.h  LightBase.h  Logger.h  Material.h  Mesh.h  MeshService.h  Model.h  Plane.h  PointLight.h  Shader.h  Skybox.h  Texture.h  Transform.h
Engine/include/event/: BaseEvent.h  EventManager.h  IEvent.h  InputEvents.h  OnTickEvent.h
Engine/include/filesystem/: IFileSystem.h  UnixFileSystem.h  WindowsFileSystem.h
Engine/include/glfw/: glfw_callback.h
Engine/include/input/: Controller.h  InputManager.h
Engine/include/renderer/: ColorPass.h  DeferredGeometryPass.h  DeferredLightingPass.h  ForwardRenderPass.h  Framebuffer.h  Pipeline.h  RenderPass.h  RenderPassType.h  RenderToTexturePass.h  SkyboxRenderPass.h  SsaoPass.h  UniformBufferManager.h
Engine/include/renderer/api/: GL420.h  GLES3.h  IGraphicsApi.h
Engine/include/scene/: Graph.h  Node.h  VisibleSet.h
Engine/include/sqlite3pp/: sqlite3pp.h
Engine/include/stb/: stb_image.h  stb_image_write.h
Engine/include/world/: Database.h  DatabaseEntity.h  DatabaseQuery.h  DatabaseRecord.h  Level.h  World.h
Engine/src/: AABB.cpp  BaseEntity.cpp  CameraBase.cpp  ChaseCamera.cpp  Entity.cpp  File.cpp  FreeCamera.cpp  Game.cpp  Input.cpp  LightBase.cpp  Logger.cpp  Mesh.cpp  MeshService.cpp  Model.cpp  Plane.cpp  PointLight.cpp  Shader.cpp  Skybox.cpp  Texture.cpp
Engine/src/event/: BaseEvent.cpp  EventManager.cpp
Engine/src/filesystem/: UnixFileSystem.cpp  WindowsFileSystem.cpp
Engine/src/glfw/: glfw_callback.cpp
Engine/src/input/: Controller.cpp  InputManager.cpp
Engine/src/renderer/: DeferredGeometryPass.cpp  DeferredLightingPass.cpp  ForwardRenderPass.cpp  Framebuffer.cpp  Pipeline.cpp  RenderPass.cpp  RenderToTexturePass.cpp  SkyboxRenderPass.cpp  SsaoPass.cpp  UniformBufferManager.cpp
Engine/src/renderer/api/: GL420.cpp  GLES3.cpp
Engine/src/scene/: Graph.cpp  Node.cpp  VisibleSet.cpp
Engine/src/sqlite3pp/: sqlite3pp.cpp  sqlite3ppext.cpp
Engine/src/world/: Database.cpp  DatabaseEntity.cpp  Level.cpp  World.cpp
GibEngine/: CMakeLists.txt
GibEngine.Editor/: CMakeLists.txt
GibEngine.Editor/include/: Editor.h
GibEngine.Engine/: CMakeLists.txt
GibEngine.Engine/include/: CameraBase.h  File.h  FreeCamera.h  Game.h
GibEngine.Engine/src/: Entity.cpp
GibEngine.Tests/src/: Main.cpp
GibEngine/include/: Input.h  Logger.h  Texture.h
GibEngine/src/: CameraBase.cpp  File.cpp  FreeCamera.cpp  Game.cpp  Input.cpp  Model.cpp  Shader.cpp
Tests/: CMakeLists.txt
Tests/include/: AABBTest.h  CameraBaseTest.h  ControllerTest.h  Entity.cpp  EntityTest.h  FileTest.h  FreeCameraTest.h  InputManagerTest.h  InputTest.h  LightBaseTest.h  Main.h  MeshServiceTest.h  RenderPassTest.h  SceneNodeTest.h  ShaderTest.h  TransformTest.h  UnixFileSystemTest.h  WindowsFileSystemTest.h  WorldDatabaseTest.h  glmock.hpp
Tests/include/mock/: MockCameraBase.h
Tests/include/mocks/: MockGraphicsApi.h
Tests/src/: AABBTest.cpp  CameraBaseTest.cpp  ControllerTest.cpp  EntityTest.cpp  FileTest.cpp  FreeCameraTest.cpp  InputManagerTest.cpp  InputTest.cpp  LightBaseTest.cpp  Main.cpp  MeshServiceTest.cpp  RenderPassTest.cpp  SceneNodeTest.cpp  ShaderTest.cpp  TransformTest.cpp  UnixFileSystemTest.cpp  WindowsFileSystemTest.cpp  WorldDatabaseTest.cpp  glmock.cpp
cmake/: FindAssimp.cmake  FindCxxopts.cmake  FindGlfw.cmake  FindGlm.cmake  FindJson11.cmake  FindSpdlog.cmake  FindSqlite3.cmake  ListCombinations.cmake  MSVCStaticRuntime.cmake
